[tool.poetry]
name = "binder-poetry"
version = "0.1.0"
description = ""
authors = ["afuetterer <fuetterh@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
nbqa = "^1.3.1"
nbval = "^0.9.6"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
